--- a/i3/config
+++ b/i3/config
@@ -3,6 +3,7 @@
 set $MODKEY Mod1
 set $TERMINAL terminator
 set $MENU dmenu_run
+set $LOCKER i3lock && sleep 1
 
 # Colors - testing
 set $COL_PRIM #FF0084
@@ -105,8 +106,22 @@ bindsym $MODKEY+Shift+6 move container to workspace number $WS6
 bindsym $MODKEY+Shift+7 move container to workspace number $WS7
 bindsym $MODKEY+Shift+8 move container to workspace number $WS8
 
+# Power management
+set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
+mode "$powermanage" {
+    bindsym l exec --no-startup-id $LOCKER, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $LOCKER && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $LOCKER && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+p exec --no-startup-id systemctl poweroff -i, mode "Default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
 # Resizing shit
-mode "resize" {
+set $resize Resize
+mode "$resize" {
     bindsym h resize shrink width 10px
     bindsym j resize grow height 10px
     bindsym k resize shrink height 10px
@@ -119,8 +134,9 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 
-# Resizing shit: the keybind edition
-bindsym $MODKEY+Ctrl+r mode "resize"
+# Bind modes to specific keys
+bindsym $MODKEY+Escape mode "$powermanage"
+bindsym $MODKEY+Ctrl+r mode "$resize"
 
 # i3-specific bindings
 bindsym $MODKEY+Shift+c reload
@@ -147,5 +163,6 @@ exec --no-startup-id dex --autostart --environment i3
 # Autostart
 exec --no-startup-id $HOME/.config/i3/scripts/init.dbus.sh
 exec --no-startup-id $HOME/.config/i3/scripts/init.keyboard.sh
+exec_always --no-startup-id $HOME/.config/i3/scripts/reload.dunst.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polybar.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.wallpaper.sh
