--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,6 +9,7 @@ height = 24pt
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
+label-mode = "[%mode%]"
 
 [module/date]
 type = internal/date
