--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,6 @@
 set $MODKEY Mod1
 set $TERMINAL terminator
 set $MENU dmenu_run
-set $LOCKER i3lock && sleep 1
 
 # Colors - testing
 set $COL_PRIM #FF0084
@@ -109,11 +108,11 @@ bindsym $MODKEY+Shift+8 move container to workspace number $WS8
 # Power management
 set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
 mode "$powermanage" {
-    bindsym l exec --no-startup-id $LOCKER, mode "default"
+    bindsym l exec --no-startup-id $HOME/.config/i3/scripts/locker.sh, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $LOCKER && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $LOCKER && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym s exec --no-startup-id systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id systemctl hibernate, mode "default"
+    bindsym Shift+r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+p exec --no-startup-id systemctl poweroff -i, mode "Default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -163,6 +162,7 @@ exec --no-startup-id dex --autostart --environment i3
 # Autostart
 exec --no-startup-id $HOME/.config/i3/scripts/init.dbus.sh
 exec --no-startup-id $HOME/.config/i3/scripts/init.keyboard.sh
+exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polkit.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.dunst.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polybar.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.wallpaper.sh
