--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -8,8 +8,14 @@ height = 24pt
 
 [module/i3]
 type = internal/i3
+show-urgent = true
+enable-click = true
+enable-scroll = true
+wrapping-scroll = false
 format = <label-state> <label-mode>
 label-mode = "[%mode%]"
+label-focused = "[%name%]"
+label-unfocused = " %name% "
 
 [module/date]
 type = internal/date
