--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -45,8 +45,8 @@ use-ui-max = false
 interval = 5
 format-volume = "[<ramp-volume> <label-volume>]"
 format-muted = "[ <label-muted>]"
-label-volume = %percentage%%
-label-muted = %percentage%%
+label-volume = %percentage:3%%
+label-muted = %percentage:3%%
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
@@ -58,7 +58,7 @@ card = intel_backlight
 use-actual-brightness = true
 enable-scroll = true
 format = "[<label>]"
-label = " %percentage%%"
+label = " %percentage:3%%"
 
 [module/battery]
 type = internal/battery
@@ -71,10 +71,10 @@ format-charging = "[<ramp-capacity> <label-charging>]"
 format-discharging = "[<ramp-capacity> <label-discharging>]"
 format-full = "[<ramp-capacity> <label-full>]"
 format-low = "[<ramp-capacity> <label-low>]"
-label-charging = "%percentage%%"
-label-discharging = "%percentage%%"
-label-full = "%percentage%%"
-label-low = "%percentage%%"
+label-charging = "%percentage:3%%"
+label-discharging = "%percentage:3%%"
+label-full = "%percentage:3%%"
+label-low = "%percentage:3%%"
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
