--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -85,8 +85,8 @@ ramp-capacity-4 = 
 type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
-layout-icon-0 = US
-layout-icon-1 = RU
+layout-icon-0 = us
+layout-icon-1 = ru
 format-prefix = "["
 format-suffix = "]"
 
