--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,9 +1,10 @@
 [bar/main]
+enable-ipc = true
 font-0 = "Ubuntu Mono:size=16;0"
-font-1 = "Symbols Nerd Font Mono:size=15;0"
+font-1 = "Symbols Nerd Font Mono:size=15;1"
 modules-left = i3
 modules-center = date
-modules-right = wireless-network wired-network pulseaudio backlight battery xkeyboard
+modules-right = wireless-network wired-network pulseaudio backlight battery xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -90,3 +91,7 @@ layout-icon-1 = ru
 format-prefix = "["
 format-suffix = "]"
 
+[module/tray]
+type = internal/tray
+format = "[<tray>]"
+tray-padding = 5
