--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,8 @@
 # Mod4 - Super
 set $MODKEY Mod1
 set $TERMINAL terminator
-set $MENU dmenu_run
+set $MENU dmenu_run -fn "Ubuntu-Mono:regular:size=12"
+set $DPI 120
 
 # Colors - testing
 set $COL_PRIM #FF0084
@@ -18,6 +19,13 @@ bindsym $MODKEY+Return exec --no-startup-id $TERMINAL; focus
 # when reaching for the D key as the index finger
 # is laying right on the R key instead, so here's that.
 bindsym $MODKEY+r exec --no-startup-id $MENU
+
+# Screenshots
+# Notice that it doesn't follow the MODKEY
+# notation as well, these are almost the same
+# as screenshots you'd take on windows
+bindsym Print exec --no-startup-id flameshot full --clipboard
+bindsym Mod4+Shift+s exec --no-startup-id flameshot gui --clipboard
 
 # Use pamixer to adust PulseAudio's (actually just
 # a wrapper PipeWire, I guess) volume settings
@@ -159,10 +167,14 @@ font pango:Ubuntu Mono 16
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
+# Start the keyring. Yikes!
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
+
 # Autostart
 exec --no-startup-id $HOME/.config/i3/scripts/init.dbus.sh
 exec --no-startup-id $HOME/.config/i3/scripts/init.keyboard.sh
-exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polkit.sh
+exec --no-startup-id $HOME/.config/i3/scripts/init.polkit.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.dunst.sh
+exec_always --no-startup-id $HOME/.config/i3/scripts/reload.flameshot.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polybar.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/reload.wallpaper.sh
