That may not work

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,7 +1,7 @@
 [bar/main]
 enable-ipc = true
 font-0 = "Ubuntu Mono:size=16;0"
-font-1 = "Symbols Nerd Font Mono:size=15;1"
+font-1 = "Symbols Nerd Font Mono:size=13;1"
 modules-left = i3
 modules-center = date
 modules-right = wireless-network wired-network pulseaudio backlight battery xkeyboard tray
@@ -59,7 +59,7 @@ card = intel_backlight
 use-actual-brightness = true
 enable-scroll = true
 format = "[<label>]"
-label = " %percentage:3%%"
+label = " %percentage:3%%"
 
 [module/battery]
 type = internal/battery
@@ -76,11 +76,16 @@ label-charging = "%percentage:3%%"
 label-discharging = "%percentage:3%%"
 label-full = "%percentage:3%%"
 label-low = "%percentage:3%%"
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
 
 [module/xkeyboard]
 type = internal/xkeyboard
