--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,10 +1,11 @@
 [bar/main]
 enable-ipc = true
-font-0 = "Ubuntu Mono:size=16;0"
-font-1 = "Symbols Nerd Font Mono:size=13;1"
+font-0 = "Ubuntu Mono:size=16;3"
+font-1 = "Symbols Nerd Font Mono:size=14;2"
+font-2 = "Noto Color Emoji:scale=10:style=Regular;2"
 modules-left = i3
 modules-center = date
-modules-right = wireless-network wired-network pulseaudio backlight battery xkeyboard tray
+modules-right = pulseaudio backlight battery wireless-network wired-network xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -17,40 +18,23 @@ format = <label-state> <label-mode>
 label-mode = "[%mode%]"
 label-focused = "[%name%]"
 label-unfocused = " %name% "
+label-urgent = "<%name%>"
+label-visible = "[%name%]"
 
 [module/date]
 type = internal/date
-date = "[%d/%m/%Y %H:%M:%S]"
-
-[module/wireless-network]
-type = internal/network
-interface = wlp7s0
-interface-type = wireless
-interval = 1.0
-format-connected = "[<label-connected>]"
-format-disconnected = ""
-label-connected = %essid% %downspeed:9%
-
-[module/wired-network]
-type = internal/network
-interface = enp8s0
-interface-type = wired
-interval = 1.0
-format-connected = "[<label-connected>]"
-format-disconnected = ""
-label-connected = %ifname% %downspeed:9%
+date = "%d/%m/%Y %H:%M:%S"
 
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = false
 interval = 5
-format-volume = "[<ramp-volume> <label-volume>]"
-format-muted = "[ <label-muted>]"
+format-volume = "<ramp-volume> <label-volume> | "
+format-muted = " <label-muted> | "
 label-volume = %percentage:3%%
 label-muted = %percentage:3%%
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+ramp-volume-0 = 
+ramp-volume-1 = 
 click-right = pavucontrol
 
 [module/backlight]
@@ -58,8 +42,8 @@ type = internal/backlight
 card = intel_backlight
 use-actual-brightness = true
 enable-scroll = true
-format = "[<label>]"
-label = " %percentage:3%%"
+format = "<label> | "
+label = " %percentage:3%%"
 
 [module/battery]
 type = internal/battery
@@ -68,10 +52,10 @@ low-at = 30
 battery = BAT0
 adapter = ADP0
 poll-interval = 5
-format-charging = "[<ramp-capacity> <label-charging>]"
-format-discharging = "[<ramp-capacity> <label-discharging>]"
-format-full = "[<ramp-capacity> <label-full>]"
-format-low = "[<ramp-capacity> <label-low>]"
+format-charging = "<ramp-capacity> <label-charging> | "
+format-discharging = "<ramp-capacity> <label-discharging> | "
+format-full = "<ramp-capacity> <label-full> | "
+format-low = "<ramp-capacity> <label-low> | "
 label-charging = "%percentage:3%%"
 label-discharging = "%percentage:3%%"
 label-full = "%percentage:3%%"
@@ -87,16 +71,35 @@ ramp-capacity-7 = 
 ramp-capacity-8 = 
 ramp-capacity-9 = 
 
+[module/wireless-network]
+type = internal/network
+interface = wlp7s0
+interface-type = wireless
+interval = 1.0
+format-connected = " <label-connected> "
+format-disconnected = ""
+label-connected = 
+
+[module/wired-network]
+type = internal/network
+interface = enp8s0
+interface-type = wired
+interval = 1.0
+format-connected = " <label-connected> "
+format-disconnected = ""
+label-connected = 
+
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
-layout-icon-0 = us
-layout-icon-1 = ru
-format-prefix = "["
-format-suffix = "]"
+blacklist-2 = caps lock
+label-layout = "%icon% "
+layout-icon-0 = us;US
+layout-icon-1 = ru;RU
 
 [module/tray]
 type = internal/tray
-format = "[<tray>]"
+format = "<tray> "
 tray-padding = 5
+tray-size = 16pt
