--- a/i3/config
+++ b/i3/config
@@ -1,27 +1,24 @@
-# Mod1 - Alt
-# Mod4 - Super
-set $MODKEY Mod1
-set $TERMINAL terminator
-set $MENU dmenu_run -fn "Ubuntu-Mono:regular:size=18"
-set $DPI 120
-
 # Colors - testing
 set $COL_PRIM #FF0084
 set $COL_SECN #2E2E2E
 set $COL_BACK #000000
 set $COL_FORE #FFFFFF
 
+# Commands
+set $MENU dmenu_run -nb "#000000" -sb "#FF0084" -sf "#000000" -fn "Ubuntu-Mono:regular:size=18"
+set $TERMINAL terminator
+
 # Start a new terminal session
-bindsym $MODKEY+Return exec --no-startup-id $TERMINAL; focus
+bindsym Mod1+Return exec --no-startup-id $TERMINAL; focus
 
 # Run the menu application
 # My hands don't physically feel comfortable
 # when reaching for the D key as the index finger
 # is laying right on the R key instead, so here's that.
-bindsym $MODKEY+r exec --no-startup-id $MENU
+bindsym Mod1+r exec --no-startup-id $MENU
 
 # Screenshots
-# Notice that it doesn't follow the MODKEY
+# Notice that it doesn't follow the common key
 # notation as well, these are almost the same
 # as screenshots you'd take on windows
 bindsym Print exec --no-startup-id flameshot full --clipboard
@@ -43,45 +40,31 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 # Holding this allows to drag
 # floating containers around whilst
 # holding $MODKEY and left mouse button
-floating_modifier $MODKEY
+floating_modifier Mod1
 
 # Kill the focused container
-bindsym $MODKEY+Shift+q kill
+bindsym Mod1+q kill
 
 # Move focus around containers
-bindsym $MODKEY+h focus left
-bindsym $MODKEY+j focus down
-bindsym $MODKEY+k focus up
-bindsym $MODKEY+l focus right
+bindsym Mod1+Left  focus left
+bindsym Mod1+Down  focus down
+bindsym Mod1+Up    focus up
+bindsym Mod1+Right focus right
 
 # Move focused container around
-bindsym $MODKEY+Shift+h move left
-bindsym $MODKEY+Shift+j move down
-bindsym $MODKEY+Shift+k move up
-bindsym $MODKEY+Shift+l move right
-
-# I sometimes feel like using arrows
-# Move focus around containers
-bindsym $MODKEY+Left  focus left
-bindsym $MODKEY+Down  focus down
-bindsym $MODKEY+Up    focus up
-bindsym $MODKEY+Right focus right
-
-# I sometimes feel like using arrows
-# Move focused container around
-bindsym $MODKEY+Shift+Left  move left
-bindsym $MODKEY+Shift+Down  move down
-bindsym $MODKEY+Shift+Up    move up
-bindsym $MODKEY+Shift+Right move right
+bindsym Mod1+Shift+Left  move left
+bindsym Mod1+Shift+Down  move down
+bindsym Mod1+Shift+Up    move up
+bindsym Mod1+Shift+Right move right
 
 # Split container vertically/horizontally
-bindsym $MODKEY+v split v
-bindsym $MODKEY+b split h
+bindsym Mod1+z split v
+bindsym Mod1+x split h
 
 # Change container layout
-bindsym $MODKEY+s layout stacking
-bindsym $MODKEY+t layout tabbed
-bindsym $MODKEY+e layout toggle split
+bindsym Mod4+s layout stacking
+bindsym Mod4+t layout tabbed
+bindsym Mod4+e layout toggle split
 
 # Define workspace names
 set $WS1 "1"
@@ -94,24 +77,24 @@ set $WS7 "7"
 set $WS8 "8"
 
 # Switch to workspace
-bindsym $MODKEY+1 workspace number $WS1
-bindsym $MODKEY+2 workspace number $WS2
-bindsym $MODKEY+3 workspace number $WS3
-bindsym $MODKEY+4 workspace number $WS4
-bindsym $MODKEY+5 workspace number $WS5
-bindsym $MODKEY+6 workspace number $WS6
-bindsym $MODKEY+7 workspace number $WS7
-bindsym $MODKEY+8 workspace number $WS8
+bindsym Mod1+1 workspace number $WS1
+bindsym Mod1+2 workspace number $WS2
+bindsym Mod1+3 workspace number $WS3
+bindsym Mod1+4 workspace number $WS4
+bindsym Mod1+5 workspace number $WS5
+bindsym Mod1+6 workspace number $WS6
+bindsym Mod1+7 workspace number $WS7
+bindsym Mod1+8 workspace number $WS8
 
 # Move focused container to workspace
-bindsym $MODKEY+Shift+1 move container to workspace number $WS1
-bindsym $MODKEY+Shift+2 move container to workspace number $WS2
-bindsym $MODKEY+Shift+3 move container to workspace number $WS3
-bindsym $MODKEY+Shift+4 move container to workspace number $WS4
-bindsym $MODKEY+Shift+5 move container to workspace number $WS5
-bindsym $MODKEY+Shift+6 move container to workspace number $WS6
-bindsym $MODKEY+Shift+7 move container to workspace number $WS7
-bindsym $MODKEY+Shift+8 move container to workspace number $WS8
+bindsym Mod1+Shift+1 move container to workspace number $WS1
+bindsym Mod1+Shift+2 move container to workspace number $WS2
+bindsym Mod1+Shift+3 move container to workspace number $WS3
+bindsym Mod1+Shift+4 move container to workspace number $WS4
+bindsym Mod1+Shift+5 move container to workspace number $WS5
+bindsym Mod1+Shift+6 move container to workspace number $WS6
+bindsym Mod1+Shift+7 move container to workspace number $WS7
+bindsym Mod1+Shift+8 move container to workspace number $WS8
 
 # Power management
 set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
@@ -129,10 +112,6 @@ mode "$powermanage" {
 # Resizing shit
 set $resize Resize
 mode "$resize" {
-    bindsym h resize shrink width 10px
-    bindsym j resize grow height 10px
-    bindsym k resize shrink height 10px
-    bindsym l resize grow width 10px
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
@@ -142,12 +121,12 @@ mode "$resize" {
 }
 
 # Bind modes to specific keys
-bindsym $MODKEY+Escape mode "$powermanage"
-bindsym $MODKEY+Ctrl+r mode "$resize"
+bindsym Mod1+Escape mode "$powermanage"
+bindsym Mod1+c mode "$resize"
 
 # i3-specific bindings
-bindsym $MODKEY+Shift+c reload
-bindsym $MODKEY+Shift+r restart
+bindsym Mod4+Ctrl+c reload
+bindsym Mod4+Ctrl+r restart
 
 # Container borders
 default_border pixel 1
