--- a/i3/config
+++ b/i3/config
@@ -96,7 +96,7 @@ bindsym Mod1+Shift+8 move container to workspace number $WS8
 # Power management
 set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
 mode "$powermanage" {
-    bindsym l exec --no-startup-id $HOME/.config/i3/scripts/locker.sh, mode "default"
+    bindsym l exec --no-startup-id $HOME/.config/i3/locker.sh, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
     bindsym s exec --no-startup-id systemctl suspend, mode "default"
     bindsym h exec --no-startup-id systemctl hibernate, mode "default"
@@ -144,9 +144,9 @@ font pango:Ubuntu Mono 16
 exec --no-startup-id dex --autostart --environment i3
 
 # Autostart
-exec --no-startup-id $HOME/.config/i3/scripts/init.dbus.sh
-exec --no-startup-id $HOME/.config/i3/scripts/init.keyboard.sh
-exec_always --no-startup-id $HOME/.config/i3/scripts/reload.dunst.sh
-exec_always --no-startup-id $HOME/.config/i3/scripts/reload.flameshot.sh
-exec_always --no-startup-id $HOME/.config/i3/scripts/reload.polybar.sh
-exec_always --no-startup-id $HOME/.config/i3/scripts/reload.wallpaper.sh
+exec --no-startup-id $HOME/.config/i3/dbus.sh
+exec_always --no-startup-id $HOME/.config/i3/dunst.sh
+exec_always --no-startup-id $HOME/.config/i3/flameshot.sh
+exec_always --no-startup-id $HOME/.config/i3/keyboard.sh
+exec_always --no-startup-id $HOME/.config/i3/polybar.sh
+exec_always --no-startup-id $HOME/.config/i3/wallpaper.sh
