--- a/systemd/wakelock@.service
+++ b/systemd/wakelock@.service
@@ -6,7 +6,7 @@ Description = Lock the system on wakeup (%i)
 User=%i
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=/home/%i/.config/i3/scripts/locker.sh
+ExecStart=/home/%i/.config/i3/locker.sh
 
 [Install]
 WantedBy=sleep.target suspend.target
