--- a/i3/config
+++ b/i3/config
@@ -101,6 +101,9 @@ bindsym Mod1+Shift+6 move container to workspace number $WS6
 bindsym Mod1+Shift+7 move container to workspace number $WS7
 bindsym Mod1+Shift+8 move container to workspace number $WS8
 
+# Focus on the latest urgent window
+bindsym Mod1+p [urgent=latest] focus
+
 # Power management
 set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
 mode "$powermanage" {
