--- a/i3/config
+++ b/i3/config
@@ -102,7 +102,7 @@ bindsym Mod1+Shift+7 move container to workspace number $WS7
 bindsym Mod1+Shift+8 move container to workspace number $WS8
 
 # Focus on the latest urgent window
-bindsym Mod1+p [urgent=latest] focus
+bindsym Mod1+e [urgent=latest] focus
 
 # Power management
 set $powermanage Lock/Exit/Suspend/Hibernate/Reboot/Poweroff
