--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,7 +5,7 @@ font-1 = "Symbols Nerd Font Mono:size=14;2"
 font-2 = "Noto Color Emoji:scale=10:style=Regular;2"
 modules-left = i3
 modules-center = date
-modules-right = pulseaudio backlight battery wireless-network wired-network xkeyboard tray
+modules-right = pulseaudio backlight battery playerctl wireless-network wired-network xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -30,11 +30,12 @@ type = internal/pulseaudio
 use-ui-max = false
 interval = 5
 format-volume = "<ramp-volume> <label-volume> | "
-format-muted = " <label-muted> | "
+format-muted = "<ramp-volume> MUTE | "
 label-volume = %percentage:3%%
 label-muted = %percentage:3%%
-ramp-volume-0 = 
-ramp-volume-1 = 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 click-right = pavucontrol
 
 [module/backlight]
@@ -70,6 +71,16 @@ ramp-capacity-6 = 
 ramp-capacity-7 = 
 ramp-capacity-8 = 
 ramp-capacity-9 = 
+
+[module/playerctl]
+type = custom/script
+exec = ${HOME}/.config/polybar/playerctl.sh
+click-left = ${HOME}/.config/polybar/playerctl.sh notify
+format = "<label> "
+tail = true
+interval = 0.5
+env-PLAYING = 
+env-PAUSED = 
 
 [module/wireless-network]
 type = internal/network
