Bluetooth and fixes

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,7 +5,7 @@ font-1 = "Symbols Nerd Font Mono:size=14;2"
 font-2 = "Noto Color Emoji:scale=10:style=Regular;2"
 modules-left = i3
 modules-center = date
-modules-right = pulseaudio backlight battery playerctl wireless-network wired-network xkeyboard tray
+modules-right = pulseaudio backlight battery playerctl bluetooth wireless-network wired-network xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -43,17 +43,20 @@ type = internal/backlight
 card = intel_backlight
 use-actual-brightness = true
 enable-scroll = true
-format = "<label> | "
-label = " %percentage:3%%"
+format = "<ramp> <label> | "
+label = "%percentage:3%%"
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 
 [module/battery]
 type = internal/battery
 full-at = 99
-low-at = 30
+low-at = 15
 battery = BAT0
 adapter = ADP0
 poll-interval = 5
-format-charging = "<ramp-capacity> <label-charging> | "
+format-charging = "<animation-charging> <label-charging> | "
 format-discharging = "<ramp-capacity> <label-discharging> | "
 format-full = "<ramp-capacity> <label-full> | "
 format-low = "<ramp-capacity> <label-low> | "
@@ -69,25 +72,40 @@ ramp-capacity-4 = 
 ramp-capacity-5 = 
 ramp-capacity-6 = 
 ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
+ramp-capacity-8 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-framerate = 750
 
 [module/playerctl]
 type = custom/script
 exec = ${HOME}/.config/polybar/playerctl.sh
-click-left = ${HOME}/.config/polybar/playerctl.sh notify
+click-left = ${HOME}/.config/polybar/playerctl.sh toggle
+click-right = ${HOME}/.config/polybar/playerctl.sh notify
 format = "<label> "
 tail = true
 interval = 0.5
 env-PLAYING = 
 env-PAUSED = 
 
+[module/bluetooth]
+type = custom/script
+exec = ${HOME}/.config/polybar/bluetooth.sh
+format = "<label> "
+tail = true
+interval = 1.0
+env-POWERED = 
+
 [module/wireless-network]
 type = internal/network
 interface = wlp7s0
 interface-type = wireless
 interval = 1.0
-format-connected = " <label-connected> "
+format-connected = "<label-connected> "
 format-disconnected = ""
 label-connected = 
 
@@ -96,7 +114,7 @@ type = internal/network
 interface = enp8s0
 interface-type = wired
 interval = 1.0
-format-connected = " <label-connected> "
+format-connected = "<label-connected> "
 format-disconnected = ""
 label-connected = 
 
