I just realized I don't use bluetooth on laptops

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,7 +5,7 @@ font-1 = "Symbols Nerd Font Mono:size=14;2"
 font-2 = "Noto Color Emoji:scale=10:style=Regular;2"
 modules-left = i3
 modules-center = date
-modules-right = pulseaudio backlight battery playerctl bluetooth wireless-network wired-network xkeyboard tray
+modules-right = pulseaudio backlight battery playerctl wireless-network wired-network xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -91,14 +91,6 @@ tail = true
 interval = 0.5
 env-PLAYING = 
 env-PAUSED = 
-
-[module/bluetooth]
-type = custom/script
-exec = ${HOME}/.config/polybar/bluetooth.sh
-format = "<label> "
-tail = true
-interval = 1.0
-env-POWERED = 
 
 [module/wireless-network]
 type = internal/network
