--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,7 +5,7 @@ font-1 = "Symbols Nerd Font Mono:size=14;2"
 font-2 = "Noto Color Emoji:scale=10:style=Regular;2"
 modules-left = i3
 modules-center = date
-modules-right = pulseaudio backlight battery playerctl wireless-network wired-network xkeyboard tray
+modules-right = pulseaudio backlight battery wireless-network wired-network xkeyboard tray
 height = 24pt
 
 [module/i3]
@@ -80,17 +80,6 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-5 = 
 animation-charging-framerate = 750
-
-[module/playerctl]
-type = custom/script
-exec = ${HOME}/.config/polybar/playerctl.sh
-click-left = ${HOME}/.config/polybar/playerctl.sh toggle
-click-right = ${HOME}/.config/polybar/playerctl.sh notify
-format = "<label> "
-tail = true
-interval = 0.5
-env-PLAYING = 
-env-PAUSED = 
 
 [module/wireless-network]
 type = internal/network
